--- a/frontend/shuffl/package.json
+++ b/frontend/shuffl/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~52.0.25",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-linear-gradient": "^2.8.3",
+    "expo-font": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
