--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-fastapi
-uvicorn
-python-multipart
+fastapi>=0.68.0
+uvicorn>=0.15.0
+websockets>=10.0
+pydantic>=1.8.0
+python-dotenv>=0.19.0
+python-multipart>=0.0.5
